--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,20 @@ pillow>=10.0.0
 pydantic>=2.0.0
 toml>=0.10.2
 
+# Pillow with additional format support and optimization capabilities
+pillow[webp,tiff,lcms]>=10.0.0
+
+# High-quality image resampling algorithms
+pillow-simd>=10.0.0; platform_machine == "x86_64"  # Optimized Pillow for x64
+imagequant>=1.0.0  # Advanced image quantization
+pylibjpeg>=1.4.0   # Alternative JPEG decoder for better quality
+pylibjpeg-libjpeg>=1.3.4  # JPEG support
+pylibjpeg-openjpeg>=1.3.0  # JPEG 2000 support
+
+# Image format support
+pillow-heif>=0.10.0   # HEIF/HEIC support (modern iPhone photos)
+webptools>=0.0.9      # WebP optimization tools
+
 # Telegram bot
 python-telegram-bot>=20.0
 
@@ -20,6 +34,9 @@ aiohttp>=3.8.0
 # Optional: For better image processing
 opencv-python>=4.8.0  # Optional: Advanced image processing
 
+# Optional: For GPU acceleration (NVIDIA)
+# pillow-cuda>=1.0.0; platform_system == "Linux"  # GPU-accelerated image processing
+
 # Optional: For GPIO support on Raspberry Pi
 # RPi.GPIO>=0.7.1; sys_platform == "linux"
 # gpiozero>=1.6.2; sys_platform == "linux"
@@ -29,3 +46,7 @@ opencv-python>=4.8.0  # Optional: Advanced image processing
 # pytest-asyncio>=0.21.0
 # black>=23.0.0
 # flake8>=6.0.0
+
+# Optional: For ARM/Raspberry Pi optimization
+# These may need to be compiled from source on ARM platforms
+# pillow-simd; platform_machine in ["armv7l", "aarch64"]  # ARM-optimized Pillow
